--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 </ul>
             </nav>
             <div class="media-container">
-                <img src="/img/icon-facebook.svg" alt="logo" />
-                <img src="/img/icon-instagram.svg" alt="logo" />
-                <img src="/img/icon-twitter.svg" alt="logo" />
-                <img src="/img/icon-youtube.svg" alt="logo" />
+                <img src="./img/icon-facebook.svg" alt="logo" />
+                <img src="./img/icon-instagram.svg" alt="logo" />
+                <img src="./img/icon-twitter.svg" alt="logo" />
+                <img src="./img/icon-youtube.svg" alt="logo" />
             </div>
         </header>
 
