--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
             <img src="https://placeimg.com/640/480/people" alt="" />
             <img src="https://placeimg.com/640/480/tech" alt="" />
             <img src="https://placeimg.com/640/480/cars" alt="" />
+            <img src="https://placeimg.com/640/480/animals" alt="" />
+            <img src="https://placeimg.com/640/480/nature" alt="" />
+            <img src="https://placeimg.com/1080/1920/animals" alt="" />
+            <img src="https://placeimg.com/1080/1920/animals" alt="" />
+            <img src="https://placeimg.com/1080/1920/animals" alt="" />
+            <img src="https://placeimg.com/1080/1920/animals" alt="" />
         </div>
         <script src="./js/jquery-3.4.1.min.js"></script>
         <script src="./js/popper.min.js"></script>
